--- a/design-pattern/pom.xml
+++ b/design-pattern/pom.xml
@@ -33,6 +33,11 @@
       <artifactId>lombok</artifactId>
       <version>1.16.18</version>
     </dependency>
+    <dependency>
+      <groupId>org.jetbrains</groupId>
+      <artifactId>annotations-java5</artifactId>
+      <version>16.0.2</version>
+    </dependency>
 
   </dependencies>
 
