--- a/design-pattern/pom.xml
+++ b/design-pattern/pom.xml
@@ -7,6 +7,18 @@
   <groupId>com.vbiso</groupId>
   <artifactId>design-pattern</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
 
   <dependencies>
@@ -37,6 +49,18 @@
       <groupId>org.jetbrains</groupId>
       <artifactId>annotations-java5</artifactId>
       <version>16.0.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.mongodb</groupId>
+      <artifactId>mongodb-driver</artifactId>
+      <version>3.6.4</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.mongodb</groupId>
+      <artifactId>bson</artifactId>
+      <version>3.6.4</version>
     </dependency>
 
   </dependencies>
