--- a/design-pattern/pom.xml
+++ b/design-pattern/pom.xml
@@ -74,6 +74,17 @@
       <artifactId>bson</artifactId>
       <version>3.6.4</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-collections4</artifactId>
+      <version>4.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.dom4j</groupId>
+      <artifactId>dom4j</artifactId>
+      <version>2.0.0</version>
+    </dependency>
+
 
   </dependencies>
 
